--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ numerical-analysis/midterm/tranduythanh.jpeg
 numerical-analysis/midterm/DE SO 2 - KIEM TRA GIAI TICH SO - K44.pdf
 math-software/sift/*.png
 math-software/sift/*.jpg
+__pycache__
